[gd_scene load_steps=2 format=3 uid="uid://d4d8svwtn8yj6"]

[ext_resource type="Script" path="res://PraxisMapper/Scenes/DemoSelect.gd" id="1_7xblf"]

[node name="DemoSelect" type="Node2D"]
script = ExtResource("1_7xblf")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0
color = Color(0.0156863, 0.105882, 0.0705882, 1)

[node name="Label" type="Label" parent="."]
offset_left = 314.0
offset_top = 32.0
offset_right = 546.0
offset_bottom = 55.0
scale = Vector2(2, 2)
text = "PraxisMapper Demo Selection"

[node name="btnGpsInfo" type="Button" parent="."]
offset_left = 39.0
offset_top = 312.0
offset_right = 175.0
offset_bottom = 343.0
scale = Vector2(2, 2)
text = "GPS Information"

[node name="Button" type="Button" parent="."]
offset_left = 593.0
offset_top = 319.0
offset_right = 821.0
offset_bottom = 350.0
scale = Vector2(2, 2)
text = "Draw Map On Node Demo"

[node name="Button2" type="Button" parent="."]
offset_left = 325.0
offset_top = 147.0
offset_right = 528.0
offset_bottom = 178.0
scale = Vector2(2, 2)
text = "Request GPS Permissions"

[node name="lblGranted" type="Label" parent="."]
visible = false
offset_left = 219.0
offset_top = 211.0
offset_right = 499.0
offset_bottom = 234.0
scale = Vector2(2, 2)
text = "GPS Permissions Previously Granted"

[node name="btnDrawAsImages" type="Button" parent="."]
offset_left = 595.0
offset_top = 442.0
offset_right = 804.0
offset_bottom = 473.0
scale = Vector2(2, 2)
text = "Draw Map To Image Demo"

[connection signal="pressed" from="btnGpsInfo" to="." method="GpsTest"]
[connection signal="pressed" from="Button" to="." method="OfflineDrawTest"]
[connection signal="pressed" from="Button2" to="." method="EnableGps"]
[connection signal="pressed" from="btnDrawAsImages" to="." method="DrawImagesTest"]
